@@ -15,6 +15,8 @@ Release 0.5.5.13
 	
 	- Feature request ID: 3579139
 	  additional search fields
+	  
+	- bulk add functionality for LDAP users
 	
 	
 Release 0.5.5.12
